# ai-quiz

./: .gitignore  cdk.json  package-lock.json  package.json
lib/backend/: api.ts  common.ts  gameflow.ts
lib/backend/app/: .coverage  .flake8  noxfile.py  pyproject.toml
lib/backend/app/app/: __init__.py  app.py  game.py  player.py  question.py
lib/backend/app/app/game_service/: __init__.py  base.py  openai.py
lib/backend/app/app/game_service/memory/: __init__.py  quiz.py
lib/backend/app/app/game_service/models/: __init__.py  question.py
lib/backend/app/app/gateway/: __init__.py  base.py  dynamo.py
lib/backend/app/resources/langchain/prompts/: system.txt  system2.txt
lib/backend/app/resources/langchain/schemas/: question.json
lib/backend/app/tests/: test_game.py  test_player.py  test_question.py
lib/backend/app/tests/gateway/: test_dynamo.py
lib/backend/common/: .coverage  .flake8  index.py  noxfile.py  pyproject.toml
lib/backend/common/common/: game.py  question.py
lib/backend/common/common/gateway/: __init__.py  aws.py  base.py  dynamo.py
lib/backend/common/tests/: test_game.py  test_player.py  test_question.py
lib/backend/common/tests/gateway/: test_aws.py  test_dynamo.py
lib/backend/qagen/: index.py  messages.json  pyproject.toml
lib/backend/qagen/qagen/: __init__.py  main.py  program.py  research.py  review.py
lib/backend/qagen/qagen/models/: __init__.py  question.py
lib/backend/qagen/resources/: prompt.txt
lib/backend/qagen/tests/: __init__.py
lib/base/: quiz-stack.ts
lib/constants/: auth0.ts  bfl.ts  index.ts
lib/constructs/: cache.ts  data.ts  memory.ts  routing.ts
lib/frontend/: storage.ts
lib/pipeline/: pipeline.ts  stage.ts
test/: ai-quiz.test.ts
